--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dipal-eslint",
+  "name": "eslint-config-dipal",
   "version": "1.0.0",
   "description": "dipal eslint configuration",
   "main": "index.js",
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://git.dipal.ru/Dipal/dipal-eslint.git"
+    "url": "https://github.com/bitswar/eslint-config-dipal"
   },
   "author": "dipal",
   "license": "ISC",
