--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
     "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-sonarjs": "^0.23.0"
+  },
+  "devDependencies": {
+    "eslint": "^8.50.0",
+    "typescript": "~5.2.2"
   }
 }
