--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
   "devDependencies": {
     "eslint": "^8.50.0",
     "typescript": "~5.2.2"
+  },
+  "peerDependencies": {
+    "eslint": ">= 9"
   }
 }
