--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "eslint-plugin-jsdoc": "^46.8.2",
     "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-sonarjs": "^0.23.0"
+    "eslint-plugin-sonarjs": "^0.23.0",
+    "@typescript-eslint/eslint-plugin": "^6.3.0",
+    "@typescript-eslint/parser": "^6.4.0",
+    "prettier-eslint": "^16.3.0"
   },
   "devDependencies": {
     "eslint": "^8.50.0",
