--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^6.3.0",
+    "dipal-eslint-plugin": "github:bitswar/dipal-eslint-plugin",
     "eslint": "^8.53.0",
     "eslint-config-airbnb-typescript": "^17.1.0",
     "eslint-config-prettier": "^9.0.0",
