maybe fixed deps

--- a/package.json
+++ b/package.json
@@ -13,21 +13,21 @@
   "author": "dipal",
   "license": "ISC",
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^8.24.1",
-    "eslint": "^8.53.0",
+    "@typescript-eslint/eslint-plugin": "^6.3.0",
+    "eslint": "^8.57.1",
     "eslint-config-airbnb-typescript": "^17.1.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-airbnb": "^0.0.1-security",
-    "eslint-plugin-dipal": "github:bitswar/dipal-eslint-plugin",
-    "eslint-plugin-import": "^2.29.0",
-    "eslint-plugin-jsdoc": "^46.8.2",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-airbnb": "0.0.1-security",
+    "eslint-plugin-dipal": "github:klutrem/dipal-eslint-plugin",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-jsdoc": "^46.10.1",
     "eslint-plugin-prettier": "4.2.1",
-    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-promise": "^6.6.0",
     "eslint-plugin-sonarjs": "^0.23.0",
     "prettier-eslint": "^16.3.0"
   },
   "devDependencies": {
-    "@typescript-eslint/parser": "^8.24.1",
+    "@typescript-eslint/parser": "^6.3.0",
     "eslint": "^8.50.0",
     "typescript": "~5.2.2"
   },
